--- a/PineNeedleTea/localizations/Localization.json
+++ b/PineNeedleTea/localizations/Localization.json
@@ -4,85 +4,113 @@
 
         "English": "Pine Fascicle",
         "Turkish": "Çam Demeti",
-        "Italian": "Grappolo di Pino"
+        "Italian": "Grappolo di Pino",
+        "Russian": "Сосновая хвоинка",
+        "German" : "Kiefernfaszikel"		
     },
     "GAMEPLAY_PineNeedleSingle": {
 
         "English": "Pine Fascicle",
         "Turkish": "Çam Demeti",
-        "Italian": "Grappolo di Pino"
+        "Italian": "Grappolo di Pino",
+	"Russian": "Сосновая хвоинка",
+        "German" : "Kiefernfaszikel"
     },
     "GAMEPLAY_PineNeedleMultiple": {
 
         "English": "Pine Fascicles",
         "Turkish": "Çam Demetleri",
-        "Italian": "Grappoli di Pini"
+        "Italian": "Grappoli di Pini",
+        "Italian": "Сосновые хвоинки",
+        "German" : "Kiefernbündel" 
     },
     "GAMEPLAY_PineNeedleDescription": {
 
         "English": "A little pine fascicle that fell from a tree. The needles can be used to brew tea.",
         "Turkish": "Ağaçtan düşen küçük bir çam demeti. İğneleri çay demlemek için kullanılabilir.",
-        "Italian": "Un piccolo grappolo di pino caduto da un albero. Gli aghi si possono usare per preparare un tè."
+        "Italian": "Un piccolo grappolo di pino caduto da un albero. Gli aghi si possono usare per preparare un tè.",
+        "Russian": "Маленькая сосновая веточка, упавшая с дерева. Хвою можно использовать для заваривания чая.",
+        "German" : "Ein kleines Kiefernbündel, das von einem Baum gefallen ist. Die Nadeln können zum Aufbrühen von Tee verwendet werden."
     },
     "GAMEPLAY_PineNeedleDried": {
 
         "English": "Dried Pine Fascicle",
         "Turkish": "Kurutulmuş Çam Demeti",
-        "Italian": "Grappolo di Pino Secco"
+        "Italian": "Grappolo di Pino Secco",
+        "Russian": "Высушенная сосновая хвоинка",
+        "German" : "Getrocknete Kiefernfaszikel"
     },
     "GAMEPLAY_PineNeedleDriedSingle": {
 
         "English": "Dried Pine Fascicle",
         "Turkish": "Kurutulmuş Çam Demeti",
-        "Italian": "Grappolo di Pino Secco"
-    },
+        "Italian": "Grappolo di Pino Secco",
+	"Russian": "Высушенная сосновая хвоинка",
+        "German" : "Getrocknete Kiefernfaszikel"
+		},
     "GAMEPLAY_PineNeedleDriedMultiple": {
 
         "English": "Dried Pine Fascicles",
         "Turkish": "Kurutulmuş Çam Salkımı",
-        "Italian": "Grappoli di Pini Secchi"
+        "Italian": "Grappoli di Pini Secchi",
+	"Russian": "Высушенные сосновые хвоинки",
+        "German" : "Getrocknetes Kiefernbündel" 
     },
     "GAMEPLAY_PineNeedleDriedDescription": {
 
         "English": "A dried pine fascicle filled with needles. A bunch can be prepared to be brewed into tea.",
         "Turkish": "İğnelerle dolu kurumuş bir çam salkımı. Çay demlemek için bir demet iğne kullanılabilir.",
-        "Italian": "Un grappolo di pino secco pieno di aghi. Un paio può essere preparato e infuso in un tè."
+        "Italian": "Un grappolo di pino secco pieno di aghi. Un paio può essere preparato e infuso in un tè.",
+	"Russian": "Высушенная сосновая хвоя. Хвою можно использовать для заваривания чая.",
+        "German" : "Ein getrocknetes Kiefernbündel, gefüllt mit Nadeln. Ein Bündel kann zum Aufbrühen von Tee zubereitet werden."	
     },
     "GAMEPLAY_PineNeedlePrepared": {
 
         "English": "Prepared Pine Needles",
         "Turkish": "Hazırlanmış Çam İğneleri",
-        "Italian": "Aghi di Pino Preparati"
+        "Italian": "Aghi di Pino Preparati",
+        "Russian": "Подготовленная сосновая хвоинка",
+        "German" : "Präparierte Kiefernnadeln"
     },
     "GAMEPLAY_PineNeedlePreparedSingle": {
 
         "English": "Prepared Pine Needles",
         "Turkish": "Hazırlanmış Çam İğneleri",
-        "Italian": "Aghi di Pino Preparati"
+        "Italian": "Aghi di Pino Preparati",
+	"Russian": "Подготовленная сосновая хвоинка",
+        "German" : "Präparierte Kiefernnadeln"
     },
     "GAMEPLAY_PineNeedlePreparedMultiple": {
 
         "English": "Prepared Pine Needles",
         "Turkish": "Hazırlanmış Çam İğneleri",
-        "Italian": "Aghi di Pini Preparati"
+        "Italian": "Aghi di Pini Preparati",
+	"Russian": "Подготовленные сосновые хвоинки",
+        "German" : "Präparierte Kiefernnadeln"
     },
     "GAMEPLAY_PineNeedlePreparedDescription": {
 
         "English": "A bundle of prepared pine needles that can be brewed into a tea. It also serves great as tinder.",
         "Turkish": "Demleyip çay olarakda içilebilen çam demeti. Aynı zamanda çıra olarak da kullanılır.",
-        "Italian": "Un mazzo di aghi di pino preparati che possono essere infusi in un tè. Può anche servire come una buona esca per il fuoco."
+        "Italian": "Un mazzo di aghi di pino preparati che possono essere infusi in un tè. Può anche servire come una buona esca per il fuoco.",
+        "Russian": "Пучок подготовленных сосновых хвоинок, которые можно заваривать в качестве чая. Он также отлично подходит в качестве трута.",
+        "German" : "Ein Bündel zubereiteter Kiefernnadeln, aus denen man einen Tee aufbrühen kann. Es eignet sich auch hervorragend als Zunder."
     },
     "GAMEPLAY_PineNeedleTea": {
 
         "English": "Pine Needle Tea",
         "Turkish": "Çam İğnesi Çayı",
-        "Italian": "Tè di Aghi di Pino"
+        "Italian": "Tè di Aghi di Pino",
+        "Russian": "Чай из сосновой хвои",
+        "German" : "Kiefernnadeltee"			
     },
     "GAMEPLAY_PineNeedleTeaDescription": {
 
         "English": "A herbal tea made from dried pine needles. Drinking it will help you sleep better.",
         "Turkish": "Kurutulmuş çam iğnelerinden yapılan bir bitki çayı. Bunu içmek daha iyi uyumanıza yardımcı olacaktır.",
-        "Italian": "Una tisana fatta da aghi di pino secchi. Berlo aiuta a dormire meglio."
+        "Italian": "Una tisana fatta da aghi di pino secchi. Berlo aiuta a dormire meglio.",
+        "Russian": "Травяной чай, приготовленный из сушеной сосновой хвои. Его употребление поможет вам лучше спать.",
+        "German" : "Ein Kräutertee aus getrockneten Kiefernnadeln. Wenn Sie ihn trinken, können Sie besser schlafen."
     }
 
 }
